--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sql_docs"
-version = "1.1.0"
+version = "1.2.0"
 edition = "2024"
 description = "A crate for parsing comments from sql files and using them for documentation generation"
 documentation = "https://docs.rs/sql_docs"
@@ -22,7 +22,7 @@ default = []
 fuzzing = []
 
 [dependencies]
-sqlparser = { version = "0.60.0", git = "https://github.com/apache/datafusion-sqlparser-rs", branch = "main" }
+sqlparser = { git = "https://github.com/LucaCappelletti94/sqlparser-rs", branch = "main" }
 
 [lints.rust]
 missing_docs = "forbid"
