Updated builder for using generic with trait bounds for dialect

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ default = []
 fuzzing = []
 
 [dependencies]
-sqlparser = { git = "https://github.com/LucaCappelletti94/sqlparser-rs", branch = "main" }
+sqlparser = { git = "https://github.com/LucaCappelletti94/sqlparser-rs", branch = "dialect-derives" }
 
 [lints.rust]
 missing_docs = "forbid"
